--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/zigzatlogo.png" />  
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/zaglogo.png" />  
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <title>ZigZat</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <title>Zag</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
